--- a/css/notification-main.css
+++ b/css/notification-main.css
@@ -11,15 +11,17 @@
 .notification-output{
 	position:fixed;
 	right:10px;
-	top:90px;
+	top:30px;
 	width:320px;
+	z-index:100;
 }
 
 .notification-multi-output{
 	position:fixed;
 	left:10px;
-	top:90px;
+	top:30px;
 	width:320px;
+	z-index:100;
 }	
 
 /*
@@ -241,7 +243,7 @@
     background-color: rgba(242, 242, 242, 0.91);
     border-color: rgba(120, 91, 91, 0.32);
 	min-height: 30px;
-	margin: 10px;
+	margin: 20px 240px 20px 20px;
 	min-width: 100px;
 	margin-left: 20px;
 	margin-top: 25px;
